bugfix magic numbers and refactoring