@@ -1,32 +1,26 @@
 package com.yandex.taskTracker.service;
 
 import com.yandex.taskTracker.model.Task;
-
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
 
-    private List<Task> tasksHistory = new ArrayList<>();
+    private static final int TASK_HISTORY_LIST_SIZE = 10;
+    private LinkedList<Task> tasksHistory = new LinkedList<>();
+
     @Override
     public void add(Task task) {
         if (task != null) {
-            if (tasksHistory.size() < 10) {
-                tasksHistory.add(task);
-            } else {
-                tasksHistory.remove(0);
-                tasksHistory.add(task);
+            if (tasksHistory.size() >= TASK_HISTORY_LIST_SIZE) {
+                tasksHistory.removeFirst();
             }
+            tasksHistory.addLast(task);
         }
     }
 
     @Override
     public List<Task> getHistory() {
-        for (Task task: tasksHistory) {
-            if (task == null) {
-                tasksHistory.remove(null);
-            }
-        }
-        return tasksHistory;
+        return List.copyOf(tasksHistory);
     }
 }
